--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+winit = "0.30.9"
+wgpu = "24.0.3"
+anyhow = "1.0.97"
+env_logger = "0.11.7"
+log = "0.4.26"
