--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,12 @@ anyhow = "1.0.97"
 env_logger = "0.11.7"
 log = "0.4.26"
 futures = "0.3.31"
+
+[dev-dependencies]
 bytemuck = "1.22.0"
+
+[[example]]
+name = "triangle"
+
+[[example]]
+name = "triangle_raw"
