--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,7 @@ anyhow = "1.0.97"
 env_logger = "0.11.7"
 log = "0.4.26"
 futures = "0.3.31"
+nalgebra = { version = "0.33.2", features = ["bytemuck"] }
 
 [dev-dependencies]
 bytemuck = "1.22.0"
-
-[[example]]
-name = "triangle"
-
-[[example]]
-name = "triangle_raw"
